corrected js filepath

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </p>
     </div>
   </section>
-  <script src="D:\MSU-CBC\Coin Compare\Coin-Compare\assets\js\coingecko.js"></script>
+  <script src="./assets/MSU-CBC/Coin Compare/Coin-Compare/assets/js/coingecko.js"></script>
   <script src="script.js"></script>
   </body>
 </html>
