--- a/results.html
+++ b/results.html
@@ -9,19 +9,63 @@
 
 
 <div class="myResults">
-    <h2>This is an example chart</h2>
-    <p>Ready for our crypto additions!</p>
+  <h2>This is an example chart</h2>
+  <p>Ready for our crypto additions!</p>
 </div>
+
+
+
+<div id="result_chart"> 
+  <div>
+    <canvas id="myChart"></canvas>
+  </div>
+  
+  <div id="coin_stats">
+    <p id="coin_market_cap">Market Cap:</p>
+    <p id="coin_volume">Volume</p>
+    <p id="coin_percentage_change">Perctange change</p>
+  </div>
+</div>
+
+
+<table style="width:50%" id="result_chart"> Coin Comparisons
+  <tr>
+    <th>Coin 1</th>
+    <th>Coin 2</th>
+    <th>Coin 3</th>
+  </tr>
+  <tr id="coin_comparison_1">
+    <td>Market Cap</td>
+    <td>Volume</td>
+    <td>Percent Change</td>
+  </tr>
+  <tr id="coin_comparison_2">
+    <td>Market Cap</td>
+    <td>Volume</td>
+    <td>Percent Change</td>
+  </tr>
+  <tr id="coin_comparison_3">
+    <td>Market Cap</td>
+    <td>Volume</td>
+    <td>Percent Change</td>
+  </tr>
+</table>
 
 <div>
-    <canvas id="myChart"></canvas>
+  <input type="text" placeholder="Search.." id="coin_comparison_searchbar">
+  <input type="submit" id="coin_comparison_search_button">
 </div>
-
 
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script>
 
+//ToDo 
+//1) format html and divs. 
+//2) create stat element. 
+//3) create comparison table.
+
+//Consider changing labels to only the past 7 days.
 const labels = [
   'January',
   'February',
@@ -30,6 +74,8 @@ const labels = [
   'May',
   'June',
 ];
+
+//will have to pull coin info and plug it into data.
 const data = {
   labels: labels,
   datasets: [{
@@ -52,6 +98,13 @@ const config = {
       document.getElementById('myChart'),
       config
     );
+  
+
+  
+  
+  
+  
   </script>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 </body>
 </html>
