fixed table issue

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <section>
     <div class="container">
       <div class="notification is-primary" id="table">
-        <table class="table is-bordered is-striped is-hoverable">
+        <table class="table is-bordered is-striped is-hoverable is-fullwidth">
           <thead>
             <tr>
               <th><abbr title="Position">Pos</abbr></th>
