added search bar and button to index.html

--- a/index.html
+++ b/index.html
@@ -68,6 +68,19 @@
       <h1 class="title">
         Welcome to Coin Compare!
       </h1>
+        <br>
+        <form>
+          <div class="field has-addons">
+            <div class="control">
+              <input class="input" type="text" placeholder="Search currencies">
+            </div>
+            <div class="control">
+              <a class="button is-primary">
+                Search
+              </a>
+            </div>
+          </div>
+        </form>
     </div>
   </div>
   </section>
