--- a/index.html
+++ b/index.html
@@ -102,17 +102,12 @@
         <table class="table is-bordered is-striped is-hoverable is-fullwidth">
           <thead>
             <tr>
-              <th><abbr title="Position">Pos</abbr></th>
-              <th>Team</th>
-              <th><abbr title="Played">Pld</abbr></th>
-              <th><abbr title="Won">W</abbr></th>
-              <th><abbr title="Drawn">D</abbr></th>
-              <th><abbr title="Lost">L</abbr></th>
-              <th><abbr title="Goals for">GF</abbr></th>
-              <th><abbr title="Goals against">GA</abbr></th>
-              <th><abbr title="Goal difference">GD</abbr></th>
-              <th><abbr title="Points">Pts</abbr></th>
-              <th>Qualification or relegation</th>
+              <th><abbr title="Name">Name</abbr></th>
+              <th><abbr title="Symbol">Symbol</abbr></th>
+              <th><abbr title="Current Price">Current Price</abbr></th>
+              <th><abbr title="Image">Image</abbr></th>
+              <th><abbr title="Ranking">Ranking</abbr></th>
+              <th><abbr title="Info">Info</abbr></th>
             </tr>
           </thead>
           <tfoot>
