added coin compare logo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <nav class="navbar is-primary" class="navbar" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
-        <a class="navbar-item" href="coin-compare-logo">
+        <a class="navbar-item" href="./assets/js/coin-compare-logo.png">
           <img src="./assets/js/coin-compare-logo.png" width="112" height="28">
         </a>
         <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
@@ -88,7 +88,7 @@
   <footer class="footer">
     <div class="content has-text-centered">
       <p>
-        <strong>Bulma</strong> by <a href="https://jgthms.com">Jeremy Thomas</a>. The source code is licensed
+        <strong>Coin Compare</strong> by <a href="https://github.com/mlkrauz/Coin-Compare">mlkrauz - matthendrian - AM-Cowles</a>. The source code is licensed
         <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
         is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
       </p>
