editted index.html

--- a/index.html
+++ b/index.html
@@ -69,7 +69,11 @@
                 <th><abbr title="Results">Results</abbr></th>
               </tr>
             </thead>
-            <tr><td></td></tr>
+            <tr>
+              <td>
+                <!--table content-->
+              </td>
+            </tr>
             <tfoot>
               <tr>
                 <th><abbr title="Rank">Rank</abbr></th>
