Fixed logo, restructured repository.

--- a/results.html
+++ b/results.html
@@ -49,7 +49,7 @@
 
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="assets.js"></script>
+<script src="./assets/js/assets.js"></script>
 <script>
 //IMPORTANT
 //When you are ready to pass a user selected coin to the chart, please do the following:
