--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <body>
     <nav class="navbar is-primary" class="navbar" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
-        <a class="navbar-item" href="./assets/js/coin-compare-logo.png">
-          <img src="./assets/js/coin-compare-logo.png" width="112" height="28">
-        </a>
+        <!-- <a class="navbar-item" href="./assets/js/coin-compare-logo.png"> -->
+          <img src="./assets/images/coin-compare-logo.png" width="150" height="80">
+        <!-- </a> -->
         <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
           <span aria-hidden="true"></span>
           <span aria-hidden="true"></span>
@@ -101,6 +101,6 @@
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="./assets/js/coingecko.js"></script>
-  <script src="script.js"></script>
+  <script src="./assets/js/script.js"></script>
   </body>
 </html>
