Chart buttons now load result.html, passing in the ID of the coin.

--- a/results.html
+++ b/results.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
-<link rel="stylesheet" href="Coin-Compare-Stylesheet.css">
 
 <head>
   <meta charset="UTF-8">
@@ -49,6 +48,7 @@
 
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="./assets/js/coingecko.js"></script>
 <script src="./assets/js/assets.js"></script>
 <script>
 //IMPORTANT
