--- a/results.html
+++ b/results.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
-<link rel="stylesheet" href="Coin-Compare-Stylesheet.css">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="./assets/css/style.css">
 
 <head>
   <meta charset="UTF-8">
@@ -55,6 +53,7 @@
 
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="./assets/js/coingecko.js"></script>
 <script src="./assets/js/assets.js"></script>
 <script>
 //IMPORTANT
