Added images. Overhauled results.html... sorry for breaking some of your stuff Matt!

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
         <div class="message-body">
           <input class="input" type="text" placeholder="Search cryptocurrency by name or symbol!">
-          <div id="searchResults" class="dropdown">
+          <div id="searchResults" class="dropdown is-active">
             
           </div>
         </div>
