--- a/results.html
+++ b/results.html
@@ -1,167 +1,97 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
-<link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
 
-<head>
-  <meta charset="UTF-8">
-  <title>Coin Compare</title>
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <title>Coin Compare</title>
+  </head>
 
+  <body>
+    <nav class="navbar is-primary" class="navbar" role="navigation" aria-label="main navigation">
+      <div class="navbar-brand">
+        <!-- <a class="navbar-item" href="./assets/js/coin-compare-logo.png"> -->
+          <img src="./assets/images/coin-compare-logo.png" alt="logo" width="150" height="80">
+        <!-- </a> -->
+        <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+        </a>
+      </div>
+    </nav>
 
-
-<div class="container">
-  <h1 class="title">Coin Performance</h2>
-  <p>7-day price chart</p>
-</div>
-
-
-
-<div id="result_chart"> 
-  <div>
-    <canvas id="myChart"></canvas>
-  </div>
-  
-  <div id="coin_stats" class="container">
-    <p id="coin_market_cap">Market Cap:</p>
-    <p id="coin_volume">Volume:</p>
-    <p id="coin_percentage_change">Perctange Change:</p>
-  </div>
-</div>
-
-<div class="container">
-  <input type="Reset" id="coin_comparison_reset_button" class="button">
-</div>
-
-<div class="container">
-  <table style="width:50%" id="result_chart" class="container"> Coin Comparisons
-   <tr>
-     <th>Name</th>
-     <th>Price</th>
-     <th>Market Cap</th>
-     <th>24-Hour Volume</th>
-  </tr>
-
- <tbody id="tableBody"></tbody>
- </table>
-</div>
-
-<div>
-  <input type="text" placeholder="Search.." class="coin_comparison_searchbar">
-  <input type="submit" id="coin_comparison_search_button" class="button">
-</div>
-
-
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="./assets/js/coingecko.js"></script>
-<script src="./assets/js/assets.js"></script>
-<script>
-//IMPORTANT
-//When you are ready to pass a user selected coin to the chart, please do the following:
-//1) store price data for last 7 days in an array (see example for bitArray if confused)
-//2) store the coin title (this can be a normal var). 
-//3) replace the sample data in mySelectedCoin with the name of price array. Replace the label with your stored coin title. 
-//3) add mySelectedCoin to the var 'speedData' so it can be graphed. 
-
-var resetButton = document.getElementById('coin_comparison_reset_button');
-var searchButton = document.getElementById('coin_comparison_search_button')
-
-
-
-//gets the day of the week, and appends it to the chart. 
-const days = ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday'];
-var goBackDays = 7;
-
-var today = new Date();
-var daysSorted = [];
-
-for(var i = 0; i < goBackDays; i++) {
-  var newDate = new Date(today.setDate(today.getDate() - 1));
-  daysSorted.push(days[newDate.getDay()]);
-}
-
-var speedCanvas = document.getElementById("myChart");
-
-
-var mySelectedCoin = {
-    label: "Car B - Speed (mph)",
-    //INSERT YOUR PRICE ARRAY HERE
-    data: [20, 15, 60, 60, 65, 30, 70],
-    lineTension: 0,
-    fill: false,
-  borderColor: 'blue'
-  };
-
-
-var Bitcoin = {
-    label: "Bitcoin",
-    data: bitArray,
-    hidden: true,
-    lineTension: 0,
-    fill: false,
-    borderColor: 'green'
-  };
-
-var Ethereum = {
-    label: "Ethereum",
-    data: ethArray,
-    hidden: true,
-    lineTension: 0,
-    fill: false,
-  borderColor: 'blue'
-  };
-
-var BinanceCoin = {
-    label: "Binance Coin",
-    data: bnbArray,
-    hidden: true,
-    lineTension: 0,
-    fill: false,
-  borderColor: 'orange'
-};
-
-
-//ADD mySelectedCoin AFTER it is assigned an array value. Otherwise it will not load the chart as mySelectedCoin will be undefined. 
-var speedData = {
-  labels: daysSorted.reverse(),
-  datasets: [Bitcoin,Ethereum,BinanceCoin]
-};
-
-var chartOptions = {
-  legend: {
-    display: true,
-    position: 'top',
-    labels: {
-      boxWidth: 80,
-      fontColor: 'black'
-    }
-
-  }
-};
-
-var lineChart = new Chart(speedCanvas, {
-  type: 'line',
-  data: speedData,
-  options: chartOptions
-});
-
-//this appends the current coin to the coin_stats display.
-//Use this to load the array sent from Index.html, and append it's data to the page. 
-/*
-    var currentCard = $("coin_stats").append("<div>").addClass("card-body");
-    currentCard.empty();
-    //var currentName = currentCard.append("<p>");
-    // currentCard.append(currentName);
+    <div class="section">
+      <div class="container">
+        <div class="notification is-primary"> 
+          <div id="result_chart">
+            <h1 class="title">Coin Performance</h1>
+            <p>7-day price chart</p>
+            <div class="box">
+              <canvas id="myChart"></canvas>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     
-    //append market data to the card. 
-    var currentTemp = currentName.append("<p>");
-        currentName.append(currentTemp);
-        currentTemp.append("<p>" + "Market Cap: " + data['main']['market_caps'].toFixed(2) + "</p>");
-        currentTemp.append("<p>" + "Volume: " + data['main']['volume'] + "%" + "</p>");
-        currentTemp.append("<p>" + "Change: " + data['price'][0] + "</p>");
-      */
-  
-  </script>
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-</body>
+    <div class="section">
+      <div class="container">
+        <div class="notification is-primary">
+          <h1 class="title">Coin Comparisons</h1>
+          <div class="box">
+            <table id="result_chart" class="table is-striped is-narrow is-fullwidth"> 
+              <thead>
+                <tr>
+                  <th>Statistic</th>
+                  <th>Bitcoin</th>
+                  <th>Ethereum</th>
+                  <th>Binance Coin</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Price</td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td>Percentage Change (7d)</td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td>Market Cap</td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td>Volume</td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <!-- All placeholder 
+          <div id="coin_stats">
+            <p id="coin_market_cap">Market Cap:</p>
+            <p id="coin_volume">Volume:</p>
+            <p id="coin_percentage_change">Perctange Change:</p>
+          </div>
+          -->
+        </div>
+      </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="./assets/js/coingecko.js"></script>
+    <script src="./assets/js/assets.js"></script>
+  </body>
 </html>
