worked style.css and added a couple containers to index/results.html

--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
     <link rel="stylesheet" href="./assets/css/style.css">
   </head>
   <body>
-    <nav class="navbar is-primary" class="navbar" role="navigation" aria-label="main navigation">
-      <div class="navbar-brand">
-        <!-- <a class="navbar-item" href="./assets/js/coin-compare-logo.png"> -->
-          <img src="./assets/images/coin-compare-logo.png" width="150" height="80">
-        <!-- </a> -->
-        <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
-          <span aria-hidden="true"></span>
-          <span aria-hidden="true"></span>
-          <span aria-hidden="true"></span>
-        </a>
-      </div>
-    </nav>
+    <div class="container">
+      <nav class="navbar notification is-primary" class="navbar" role="navigation" aria-label="main navigation">
+        <div class="navbar-brand">
+          <!-- <a class="navbar-item" href="./assets/js/coin-compare-logo.png"> -->
+            <img src="./assets/images/coin-compare-logo.png" width="150" height="80">
+          <!-- </a> -->
+          <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+          </a>
+        </div>
+      </nav>
+    </div>
   <section>
   <div class="section">
     <div class="container">
@@ -66,15 +68,17 @@
     </div>
   </section>
   <br>
-  <footer class="footer">
-    <div class="content has-text-centered">
-      <p>
-        <strong>Coin Compare</strong> by <a href="https://github.com/mlkrauz/Coin-Compare">mlkrauz - matthendrian - AM-Cowles</a>. The source code is licensed
-        <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
-        is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
-      </p>
-    </div>
-  </footer>
+  <div class="container">
+    <footer class="footer">
+        <div class="content has-text-centered">
+          <p>
+            <strong>Coin Compare</strong> by <a href="https://github.com/mlkrauz/Coin-Compare">mlkrauz - matthendrian - AM-Cowles</a>. The source code is licensed
+            <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
+            is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
+          </p>
+        </div>
+    </footer>
+  </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="./assets/js/coingecko.js"></script>
