--- a/results.html
+++ b/results.html
@@ -56,7 +56,8 @@
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="./assets/js/assets.js"></script>
-<script>
+<script src="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"></script>
+<script src="./assets/css/style.css"></script>
 //IMPORTANT
 //When you are ready to pass a user selected coin to the chart, please do the following:
 //1) store price data for last 7 days in an array (see example for bitArray if confused)
