--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="./assets/js/coingecko.js"></script>
+  <script src="./assets/js/coinranking.js"></script>
   <script src="./assets/js/script.js"></script>
   </body>
 </html>
